# TensorFlowWrap

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CMakeLists.txt  COMPARISON_REPORT.md  DEEP_ANALYSIS.md  FIXES.md  PATCHES.md  README.md  TEST_ANALYSIS.md  demerits.md  migration_procedure.md  procedure.md
.github/workflows/: ci.yml
cmake/: TensorFlowWrap-config.cmake.in  TensorFlowWrapConfig.cmake.in
docs/: COMPARISON_REPORT.md  Migration Guide - TensorFlow C API to TensorFlowWrap.md  Migration_Guide.md  User Manual - TensorFlow C++20 Wrapper.md  User Manual - TensorFlowWrap Coder Reference.md  User_Manual.md
example/: main.cpp
guidelines/: AI_DEMERITS.md  CI_STYLE_GUIDE.md  DESIGN_GUIDE.md  DEVELOPMENT_GUIDELINES.md  DOCUMENTATION_STYLE_GUIDE.md  TEST_STYLE_GUIDE.md
include/tf_wrap/: all.hpp  codes.hpp  core.hpp  easy.hpp  error.hpp  facade.hpp  facade_ops.hpp  format.hpp  graph.hpp  guarded_span.hpp  operation.hpp  ops.hpp  policy.hpp  scope_guard.hpp  session.hpp  small_vector.hpp  status.hpp  stub_control.hpp  tensor.hpp  tensor_name.hpp
include/tf_wrap/detail/: raw_tensor_ptr.hpp
include/tf_wrap/ops/: all.hpp  array.hpp  cast.hpp  common.hpp  comparison.hpp  control_flow.hpp  image.hpp  io.hpp  math.hpp  matrix.hpp  nn.hpp  random.hpp  reduction.hpp  string.hpp  variable.hpp
plans/: TESTING_PLAN_REVISED.md
scripts/ci/: check_allhpp_no_ops.sh  check_corehpp_no_ops.sh
tests/: run_compile_fail_tests.sh  test_adversarial.cpp  test_adversarial_tf.cpp  test_bool_tensor.cpp  test_comprehensive.cpp  test_comprehensive_bugs.cpp  test_comprehensive_tf.cpp  test_corner_cases.cpp  test_dtype_inference.cpp  test_easy_helpers.cpp  test_edge_cases.cpp  test_error.cpp  test_facade.cpp  test_facade_tf.cpp  test_format.cpp  test_graph.cpp  test_graph_tf.cpp  test_improvements.cpp  test_infrastructure.cpp  test_integration.cpp  test_lifecycle.cpp  test_main.cpp  test_operation.cpp  test_operation_tf.cpp  test_ops.cpp  test_real_tf.cpp  test_real_tf_minimal.cpp  test_runner.cpp  test_safety.cpp  test_scope_guard.cpp  test_session.cpp  test_session_tf.cpp  test_small_vector.cpp  test_small_vector_doctest.cpp  test_soak_tf.cpp  test_status.cpp  test_stub_dtype_tracking.cpp  test_stub_error_injection.cpp  test_tensor.cpp  test_tensor_tf.cpp  (+1 more)
tests/benchmark/: README.md  benchmark.cpp  compare.py
tests/cmake_integration_test/: CMakeLists.txt  main.cpp  run_test.sh
tests/compile_fail/: compile_fail_read_wrong_type.cpp  compile_fail_status_copy.cpp  compile_fail_tensor_char.cpp  compile_fail_tensor_string.cpp  compile_fail_tensor_void.cpp
tests/coverage/: README.md  coverage.sh
tests/fuzz/: README.md  build_fuzz.sh  fuzz_session.cpp  fuzz_small_vector.cpp  fuzz_tensor.cpp  run_fuzz.sh
tools/: generate_ops.py
